2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-07  Craig Black  <craig.black@aonix.com>

        * native/jni/classpath/native_state.c
        (add_node): Update head pointer when moving node to front of list.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-06  Mark Wielaard  <mark@klomp.org>

        Reported by Timo Lindfors <timo.lindfors@iki.fi>
        java/util/regex/Matcher.java (lookingAt): Set position when match
        found.
        (matches): Implemented through lookingAt().

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-06  Mark Wielaard  <mark@klomp.org>

        Fix suggested by Timo Lindfors <timo.lindfors@iki.fi>
        * java/util/regex/Pattern.java (split(CharSequence,int)):
        Fix while empties > 0 loops.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/Thread.java (sleep): Improved
	exception messages.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/Class.java (newInstance): 
	Improved exception messages.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/net/PlainSocketImpl.c (gnu_java_net_PlainSocketImpl_socketAccept): 
	Improved debug code.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c (jthreadedAccept): 
	Fixed accept again for the case that select was interrupted.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/compat/javac.in: Switched to use jikes
	with correct bootclasspath.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* config/s390/sysdepCallMethod.h: Added missing semicolon.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Use a single AC_CHECK_HEADERS macro
	to reduce the bloat in the configure script.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/javac.in,
	kaffe/scripts/javakey.in,
	kaffe/scripts/jdb.in,