@@ -2,6 +2,16 @@
 
 	Resynced with GNU Classpath.
 
+	2005-02-07  Mark Wielaard  <mark@klomp.org>
+
+        * java/util/ResourceBundle.java (getObject): Clarify
+        MissingResourceException detailed message.
+        (tryBundle(String,ClassLoader)): Likewise.
+
+2005-02-10  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
 	2005-02-07  Craig Black  <craig.black@aonix.com>
 
         * native/jni/classpath/native_state.c
